--- a/rock-paper-scissors/index.html
+++ b/rock-paper-scissors/index.html
@@ -26,6 +26,7 @@
     </header>
     <main>
         <section class="machine">
+            <h3 style="font-family: var(--montserrat);">Faça 10 pontos para ganhar!</h3>
             <p>Jogada da máquina</p>
             <div class="card" id="effectPlay">
                 <img id="imagem" src="https://firebasestorage.googleapis.com/v0/b/rock-paper-scissors-13a88.appspot.com/o/question.png?alt=media&token=c54c4ed2-b5a2-46d7-a4de-521e8db12233" alt="Resultado da jogada da máquina">
@@ -33,23 +34,23 @@
             </div>
         </section>
         <section id="message" style="font-family: var(--montserrat); font-weight: 600;">
-            <p></p>
+            <p style="font-size: 18px; padding: 10px; border-radius: 10px;"></p>
         </section>
         <section class="user">
             <p>Escolha sua jogada!</p>
             <div>
-                <div class="btn-def" id="rock" href="">
+                <button type="button" class="btn-def" id="rock">
                     <img src="https://firebasestorage.googleapis.com/v0/b/rock-paper-scissors-13a88.appspot.com/o/rock.png?alt=media&token=e8f4bd24-1fec-4c08-b030-a8007fb6ebee" alt="Mão fechada simbolizando o elemento pedra no jogo">
                     <span>Pedra</span>
-                </div>
-                <div class="btn-def" id="paper" href="">
+                </button>
+                <button type="button" class="btn-def" id="paper">
                     <img src="https://firebasestorage.googleapis.com/v0/b/rock-paper-scissors-13a88.appspot.com/o/paper.png?alt=media&token=5c462c7a-ec20-49d8-9c0f-2189332ae076" alt="Mão aberta simbolizando o elemento papel no jogo">
                     <span>Papel</span>
-                </div>
-                <div class="btn-def" id="scissor" href="">
+                </button>
+                <button type="button" class="btn-def" id="scissor">
                     <img src="https://firebasestorage.googleapis.com/v0/b/rock-paper-scissors-13a88.appspot.com/o/scissor.png?alt=media&token=dc716cc4-1056-4cd2-8cef-595e6b66ca65" alt="Mão com apenas dois dedos levantados simbolizando o elemento tesoura no jogo">
                     <span>Tesoura</span>
-                </div>
+                </button>
             </div>
         </section>
     </main>
