aulas e pokefind finalizada

--- a/rock-paper-scissors/index.html
+++ b/rock-paper-scissors/index.html
@@ -24,6 +24,14 @@
             </div>
         </section>
     </header>
+
+    <section id="modal">
+        <div id="modal-container">
+            <p id="modal-text"></p>
+            <small>A página será recarregada.</small>
+        </div>
+    </section>
+
     <main>
         <section class="machine">
             <h3 style="font-family: var(--montserrat);">Faça 10 pontos para ganhar!</h3>
@@ -33,9 +41,10 @@
                 <span></span>
             </div>
         </section>
-        <section id="message" style="font-family: var(--montserrat); font-weight: 600;">
-            <p style="font-size: 18px; padding: 10px; border-radius: 10px;"></p>
+        <section id="message" style="font-family: var(--montserrat); font-weight: 600; text-align: center;">
+            <span style="font-size: 18px; padding: 10px; border-radius: 10px;"></span>
         </section>
+        <span style="font-size: 12px; padding: 10px; border-radius: 10px; font-family: var(--montserrat); opacity: 0.7;"></span>
         <section class="user">
             <p>Escolha sua jogada!</p>
             <div>
