erro de conexão incluso

--- a/pokefind/index.html
+++ b/pokefind/index.html
@@ -14,6 +14,11 @@
         <img draggable="false" src="./img/logo.png" alt="">
     </header>
     <main>
+        <section id="modalOffline">
+            <h2>Você está offline!</h2>
+            <button class="btn-def" onclick="location.reload()">Recarregar página</button>
+        </section>
+
         <section id="modal-delete-pokemon">
             <div>
                 <h4 style="width: fit-content;" class="input-def">Tem certeza que deseja deletar esse Pokemón?</h4>
